version/0.32/_sources/api/solver/_autosummary/settings/phase_20.rst.txt
:orphan:

.. _phase_20:

phase
=====

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.phase_20
    :show-inheritance:

.. rubric:: Methods

========================================   =====================================================

Method                                                                                   Summary

========================================   =====================================================
:ref:`create <create>`                         Create a new instance of the current object type.

:ref:`delete <delete>`                                                  Delete selected objects.

:ref:`rename <rename>`                                                        Rename the object.

:ref:`list <list>`                                                List the names of the objects.

:ref:`list_properties <list_properties>`                   List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                                    Create a copy of the object.

========================================   =====================================================

.. rubric:: Named object type

:ref:`phase_20_child <phase_20_child>`


.. rubric:: Included in:

========================================================   ===========================================

Parent                                                                                         Summary

========================================================   ===========================================
:ref:`settings_18 <settings_18>`                                    Domain name to define settings on.

:ref:`pressure_outlet_1_child <pressure_outlet_1_child>`       'child_object_type' of pressure_outlet.

========================================================   ===========================================

